Updates from Overleaf

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -22,7 +22,7 @@ The evolutionary dynamics that we observed in non-plastic populations, however, 
 \cite{lalejini_evolutionary_2016} visually inspected the evolutionary histories of non-plastic organisms evolved in fluctuating environments, observing that mutations readily switched the set of traits expressed by offspring.
 % - Rose's phenotype switching work - TODO - work in relevant architecture results!
 \cite{canino-koning_evolution_2016} investigated how different types of changing environments shape the genetic architectures of evolved organisms, confirming that cyclically-changing environments can steer populations toward genotypes that more readily mutate to alternative phenotypes.
-Further \cite{canino-koning_evolution_2016} domonstrated that genomes evolved in harsh cyclic environments often contained vestigial fragments of genetic material adapted to prior environments.
+Further \cite{canino-koning_evolution_2016} demonstrated that genomes evolved in harsh cyclic environments often contained vestigial fragments of genetic material adapted to prior environments.
 %  - @Austin - depending on what you include about architecture results, you'll also want to work in results from Canino-Koning (2019); going to talk about their novel tasks results in next subsection.
 
 % -- @AML: --bookmark--
@@ -68,10 +68,12 @@ Thus, we might expect that non-plastic populations would better adapt to novel e
 
 % - our results -
 Indeed, our experimental results show that non-plastic populations better explore the fitness landscape, discovering more novel tasks than plastic populations.
-However, despite lower task discovery, plastic populations better exploited the fitness landscape at the end of the experiment, better retaining acquired novel tasks than non-plastic populations. 
+%However, despite lower task discovery, plastic populations better exploited the fitness landscape at the end of the experiment, better retaining acquired novel tasks than non-plastic populations. 
+However, despite lower task discovery, plastic populations better retained novel tasks, resulting in better exploitation of the fitness landscape compared to non-plastic populations.
 The frequent selective sweeps in non-plastic populations driven by environmental fluctuations made it difficult for non-plastic populations to maintain these evolved novel traits.
-Because when mutation that caused loss of a novel trait helped offspring adapt to fluctuations, loss hitchhikes to frequency because of relative value of base and novel traits; disproportionate co-occuring either because novel trait exapted or loss hitchhiked along with beneficial change in base traits.
 %Because when mutation that caused loss of a novel trait helped offspring adapt to fluctuations, loss hitchhikes to frequency because of relative value of base and novel traits; disproportionate co-occuring either because novel trait exapted or loss hitchhiked along with beneficial change in base traits.
+If the mutation that caused the loss of a novel trait also helped the offspring adapt to the environmental fluctuations, the loss hitchhikes to frequency because of the relative values of base and novel tasks.
+Such co-occurences were disproportionately observed in non-plastic populations [because/due to] [novel trait exapted or loss hitchhiked along with beneficial change in base traits].
 [Limitation (relative value): in supplemental experiments, relative value of fluctuating and novel tasks affects novel task retention, the stronger directional selection on fluctuation tasks relative to selection on novel tasks makes novel tasks harder to maintain because less deleterious to lose novel trait].
 
 % -- relevant digital evolution lit --
